<resources>
    <string name="app_name">DayJourney</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_thoughts">Add New Thoughts →</string>
    <string name="save">Save ✔</string>
    <string name="write_about_your_day">Write about your day:</string>
    <string name="i_ve_collected_your_previous_thoughts">I\'ve collected your previous thoughts</string>
    <string name="todo">TODO</string>
    <string name="so_how_do_you_feel_today">So, How do you feel today?</string>
    <string name="title">Title</string>
    <string name="back">Back</string>
    <string name="update_about_your_day">Update about your day:</string>
    <string name="don_t_worry_we_all_forget_something">Don\'t worry, we all forget something...</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>