<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/violet"
    tools:context=".update.UpdateFragment">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/UpdateEntry"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:fontFamily="@font/como_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/update"
        android:textColor="@color/cream"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/violet"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:padding="24dp"
        app:cardBackgroundColor="@color/cream"
        app:cardCornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView3"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/cream_light"
                app:cardCornerRadius="14dp"
                app:cardElevation="2dp"
                app:contentPadding="8dp"
                app:contentPaddingBottom="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFieldTItleupdate">

                <EditText
                    android:id="@+id/Update_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:fontFamily="@font/como_semibold"
                    android:hint="@string/title"
                    android:inputType="textAutoCorrect|textCapSentences|textAutoComplete"
                    android:textColor="@color/violet"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textFieldTItleupdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/como_bold"
                android:text="@string/update_about_your_day"
                android:textAlignment="viewStart"
                android:textColor="@color/violet"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/cream_light"
                app:cardCornerRadius="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="14dp">

                    <EditText
                        android:id="@+id/UpdatetextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:fontFamily="@font/como_medium"
                        android:gravity="start|top"
                        android:imeOptions="actionDone"
                        android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                        android:lines="16"
                        android:textAlignment="textStart"
                        android:textColor="@color/violet_variant"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="hello lorem ipsum dolor" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/como_heavy"
        android:text="@string/don_t_worry_we_all_forget_something"
        android:textColor="@color/cream_light"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/delete_Entry"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/delete"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_img1"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/back"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_round_chevron_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
